[gd_scene load_steps=13 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/images/player.png" type="Texture" id=2]
[ext_resource path="res://Player/images/player3.png" type="Texture" id=3]
[ext_resource path="res://Player/images/player4.png" type="Texture" id=4]
[ext_resource path="res://Player/images/trail.png" type="Texture" id=5]
[ext_resource path="res://art/music/Air_Woosh_Underwater.wav" type="AudioStream" id=6]
[ext_resource path="res://Player/sounds/346116__lulyc__retro-game-heal-sound.wav" type="AudioStream" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "right",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 54.5337
height = 73.3791

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0.7156 ), 0.0, 0.0, 0, 0, Vector2( 0.991723, 0.192 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
scale_curve = SubResource( 4 )

[node name="Player" type="Area2D"]
scale = Vector2( 0.3, 0.3 )
collision_mask = 6
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 1 )
animation = "right"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Trail" type="Particles2D" parent="."]
show_behind_parent = true
amount = 5
local_coords = false
process_material = SubResource( 5 )
texture = ExtResource( 5 )

[node name="hitTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="hitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="BulletTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="AmmoSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
